# rbyrct-gtc-2025

./: .dockerignore  .gitignore  Dockerfile.cpu  Dockerfile.gpu  Makefile  README.md  Submission.md  benchmark.py  docker-compose.yml  environment.yml  pyproject.toml  rbyrct.ipynb  rbyrct_gtc_2025.ipynb  requirements.txt
.github/workflows/: ci.yml
assets/: bench_grid.csv  bench_table.md
demo/: app.py
examples/: bench.py  bench_grid.py  plot_results.py  profile_ncu.sh  profile_nys.sh
rbyrct_core/: __init__.py  core.py  cpu_core.py  fbp_baseline.py
rbyrct_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_smoke.py
